@@ -1,5 +1,16 @@
 2016-10-22  Mark Wielaard  <mjw@redhat.com>
 
+	* dwarf.h: Add DW_LANG_OpenCL, DW_LANG_Modula3,
+	DW_LANG_C_plus_plus_03, DW_LANG_OCaml, DW_LANG_Rust, DW_LANG_Swift,
+	DW_LANG_Julia, DW_LANG_Dylan and DW_LANG_RenderScript.
+	* dwarf_aggregate_size.c (array_size): Add lower bound for
+	DW_LANG_C_plus_plus_03, DW_LANG_Python, DW_LANG_OpenCL,
+	DW_LANG_Haskell, DW_LANG_OCaml, DW_LANG_Rust, DW_LANG_Swift,
+	DW_LANG_Dylan, DW_LANG_RenderScript, DW_LANG_Modula3 and
+	DW_LANG_Julia.
+
+2016-10-22  Mark Wielaard  <mjw@redhat.com>
+
 	* dwarf.h: Add DW_CC_pass_by_reference and DW_CC_pass_by_reference.
 
 2016-10-22  Mark Wielaard  <mjw@redhat.com>
